// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine should render Badge 1`] = `
<div
  className="tc-badge"
  onClick={undefined}
>
  <span
    className="tc-badge-label"
  >
    Label
  </span>
</div>
`;

exports[`Engine should render Badge with category and delete icon 1`] = `
<div
  className="tc-badge"
  onClick={undefined}
>
  <span
    className="tc-badge-category"
  >
    Category
  </span>
  <span
    className="tc-badge-label"
  >
    Label
  </span>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`Engine should render Badge with delete icon 1`] = `
<div
  className="tc-badge"
  onClick={undefined}
>
  <span
    className="tc-badge-label"
  >
    Label
  </span>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`Engine should render disabled Badge with delete icon 1`] = `
<div
  className="tc-badge tc-badge-disabled"
  onClick={false}
>
  <span
    className="tc-badge-label"
  >
    Label
  </span>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`Engine should render selected Badge with delete icon 1`] = `
<div
  className="tc-badge tc-badge-selected"
  onClick={undefined}
>
  <span
    className="tc-badge-label"
  >
    Label
  </span>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;
